--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -1,6 +1,6 @@
 <header>
     <nav class="navbar navbar-expand-md navbar-dark bg-dark">
-        <div> <a href="https://www.in28minutes.com" class="navbar-brand">JAG TECH</a></div>
+        <div> <a href="https://www.github.com/jeffg2221" class="navbar-brand">JAG TECH</a></div>
         <ul class="navbar-nav">
             <li> <a *ngIf="hardcodedAuthenticationService.isUserLoggedIn()" routerLink="/welcome/jeffg2221" class="nav-link">Home</a></li>
             <li> <a *ngIf="hardcodedAuthenticationService.isUserLoggedIn()" routerLink="/todos" class="nav-link">Todos</a></li>
